opam-version: "1.2"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-oanda"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-oanda.git"
bug-reports: "https://github.com/vbmithr/ocaml-oanda/issues"
tags: []
available: [ ocaml-version >= "4.03.0"]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "ocplib-json-typed" {>= "0.5"}
  "ptime" {>= "0.8.3"}
]
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
